<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textName">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/toppingsText"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

        <CheckBox
            android:id="@+id/whipped_cream_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/whippedCreamText"
            android:textSize="20sp">

        </CheckBox>

        <CheckBox
            android:id="@+id/chocolate_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolateText"
            android:textSize="20sp">

        </CheckBox>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/quantity"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus">

            </Button>

            <TextView
                android:id="@+id/quantity_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/zero"
                android:textSize="20sp">

            </TextView>

            <Button
                android:id="@+id/plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus">

            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/summary"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_dollars"
            android:layout_marginTop="20dp"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/order">

        </Button>

    </LinearLayout>
</ScrollView>
